# QL

./: .gitignore  AUDIT.md  Cargo.toml  LICENSE  MILESTONE.md  README.md  go.mod
.github/workflows/: ci.yml
cmd/ql/: engine.go  format.go  main.go  source.go  types.go  watch.go
crates/ql-adapters/: Cargo.toml
crates/ql-adapters/src/: go.rs  python.rs  rust.rs  typescript.rs
crates/ql-adapters/src/go/: tests.rs
crates/ql-adapters/src/python/: tests.rs
crates/ql-adapters/src/rust/: tests.rs
crates/ql-adapters/src/typescript/: tests.rs
crates/ql-ast/: Cargo.toml
crates/ql-ast/src/: adapter.rs  analysis.rs  lib.rs  rows.rs  similarity.rs
crates/ql-ast/src/analysis/: tests.rs
crates/ql-ast/tests/: comment_attachment.rs  comment_attachment_perf.rs
crates/ql-cli/: Cargo.toml
crates/ql-cli/src/: format.rs  main.rs  source.rs  watch.rs
crates/ql-cli/src/format/: tests.rs
crates/ql-cli/src/source/: tests.rs
crates/ql-cli/tests/: cli_large_tree.rs  ignore_patterns.rs
crates/ql-core/: Cargo.toml
crates/ql-core/src/: execute.rs  lib.rs  plan.rs  protocol.rs  query.rs  storage.rs
crates/ql-core/src/execute/: tests.rs
crates/ql-core/src/plan/: tests.rs
crates/ql-core/src/query/: tests.rs
crates/ql-core/src/sql/: ast.rs  diagnostic.rs  lexer.rs  mod.rs  parser.rs
crates/ql-core/src/sql/parser/: tests.rs
crates/ql-core/src/storage/: tests.rs
crates/ql-core/tests/: storage_insert.rs
docs/: queries.md
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
schema/: tables.json
