[package]
name = "ql-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
ql-core = { path = "../ql-core" }
ql-ast = { path = "../ql-ast" }
ql-adapters = { path = "../ql-adapters" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ignore = "0.4.26"

[[bin]]
name = "ql"
path = "src/main.rs"
